// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CFHomePage should move to trial in progress page when query param trial is true 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody body hasNoBanner"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main container"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main content"
        >
          <h1
            class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
          >
            cf.continuous
          </h1>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--border StyledProps--color StyledProps--color-white StyledProps--background-orange500 StyledProps--font-align-center"
          >
            common.trialInProgress
          </p>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main description StyledProps--padding-bottom-xxlarge"
            style="width: 500px;"
          >
            common.trialInProgressDescription
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              style="width: 200px; height: 45px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                createProject
              </span>
            </button>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black StyledProps--padding-small"
            >
              orSelectExisting
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CFHomePage should render HomePageTemplate when return success with data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody body hasNoBanner"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main container"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
        >
          cf.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          cf.homepage.slogan
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/0a2u2ppp8s-getting-started-with-continuous-features"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            cf.homepage.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/123/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CFHomePage should render HomePageTemplate when return success with data 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody body hasNoBanner"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main container"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
        >
          cf.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          cf.homepage.slogan
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/0a2u2ppp8s-getting-started-with-continuous-features"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            cf.homepage.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/123/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CFHomePage should render the home page template when the current user is not created from NG 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody body hasNoBanner"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main container"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
        >
          cf.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          cf.homepage.slogan
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/0a2u2ppp8s-getting-started-with-continuous-features"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            cf.homepage.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/123/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CFHomePage should return error page if call fails 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
    style="width: 100%; height: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
        icon="error"
      >
        <svg
          data-icon="error"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
      >
        call failed
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Retry
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`CFHomePage should update the license store 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody body hasNoBanner"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main container"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
        >
          cf.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          cf.homepage.slogan
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/0a2u2ppp8s-getting-started-with-continuous-features"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            cf.homepage.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/123/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
